--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -55,10 +56,10 @@
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.55.0",
     "react-popper": "2.3.0",
